cmake_minimum_required(VERSION 3.0.0)

project(leetcode VERSION 0.1.0)



#add_executable(array data-structures/array.cpp)
add_executable(1__two_sum problems/1__two_sum.cpp)
add_executable(167__two_sum problems/167__two_sum.cpp)
add_executable(217__contains_duplicate problems/217__contains_duplicate.cpp)
add_executable(219__contains_duplicate problems/219__contains_duplicate.cpp)