cmake_minimum_required(VERSION 3.0.0)

project(leetcode VERSION 0.1.0)



#add_executable(array data-structures/array.cpp)

add_executable(matrices data-structures/matrices.cpp)
add_executable(lower_triangular data-structures/lower_triangular.cpp)
add_executable(linked_list data-structures/linked_list.cpp)



add_executable(1__two_sum problems/1__two_sum.cpp)
add_executable(167__two_sum problems/167__two_sum.cpp)

add_executable(217__contains_duplicate problems/217__contains_duplicate.cpp)
add_executable(219__contains_duplicate problems/219__contains_duplicate.cpp)
add_executable(566 problems/566.cpp)
add_executable(867 problems/867.cpp)
add_executable(2022 problems/2022.cpp)