cmake_minimum_required(VERSION 3.0.0)

project(leetcode VERSION 0.1.0)



#add_executable(array data-structures/array.cpp)

add_executable(matrices data-structures/matrices.cpp)
add_executable(lower_triangular data-structures/lower_triangular.cpp)
add_executable(linked_list data-structures/linked_list.cpp)



add_executable(1__two_sum problems/1__two_sum.cpp)
add_executable(54 problems/54.cpp)
add_executable(59 problems/59.cpp)
add_executable(125 problems/125.cpp)
add_executable(167__two_sum problems/167__two_sum.cpp)
add_executable(170 problems/170.cpp)
add_executable(217__contains_duplicate problems/217__contains_duplicate.cpp)
add_executable(219__contains_duplicate problems/219__contains_duplicate.cpp)
add_executable(220 problems/220.cpp)
add_executable(242 problems/242.cpp)
add_executable(344 problems/344.cpp)
add_executable(345 problems/345.cpp)
add_executable(566 problems/566.cpp)
add_executable(709 problems/709.cpp)
add_executable(766 problems/766.cpp)
add_executable(867 problems/867.cpp)
add_executable(917 problems/917.cpp)
add_executable(1030 problems/1030.cpp)
add_executable(1351 problems/1351.cpp)
add_executable(1572 problems/1572.cpp)
add_executable(1099 problems/1099.cpp)
add_executable(2022 problems/2022.cpp)
add_executable(2073 problems/2073.cpp)